k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beatbuddy-ingress
  namespace: beatbuddy
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: beatbuddy-backend-svc
                port:
                  number: 8080
          - path: /ws/
            pathType: Prefix
            backend:
              service:
                name: beatbuddy-backend-svc
                port:
                  number: 8080
          - path: /images/
            pathType: Prefix
            backend:
              service:
                name: beatbuddy-backend-svc
                port:
                  number: 8080
          - path: /default-profile.jpg
            pathType: Exact
            backend:
              service:
                name: beatbuddy-backend-svc
                port:
                  number: 8080
          - path: /default-group.jpg
            pathType: Exact
            backend:
              service:
                name: beatbuddy-backend-svc
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beatbuddy-frontend-svc
                port:
                  number: 80
